Fix products display for better alignment

--- a/themes/e-commerce/assets/less/e-commerce.less
+++ b/themes/e-commerce/assets/less/e-commerce.less
@@ -1323,7 +1323,18 @@ img {
   border: 2px solid @color_16;
   .add-to-cart-btn;
 }
-
+.flex-column{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.flex-wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
+.product-description{
+  flex-grow: 1;
+}
 .fb-share-button {
     transform: scale(1.5, 1.25);
     transform-origin: top left;
